# infer-bench

./: .gitattributes  .gitignore  CLAUDE.md  index.html
.github/workflows/: build.yml
archive/: README.md
src/: main.js
src-tauri/: Cargo.toml  build.rs  index.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.js  main.rs
src-tauri/src/engine/: benchmark.js
src-tauri/src/ui/: reports.js  router.js  servers.js
src-tauri/src/workspace/: index.js
src/ui/: benchmark.js  datasets.js  settings.js
